QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- Added View/Zoom Range mode option to Graph tool.


0.5.1  2018-05-21  Pre-LAC2018 release frenzy.

- Half a decade later, recent new custom entries may now get
  removed from Session Infra-client list.

- Some rather old, better said "Cambric explosion era", user
  preference options have been ditched altogether: Display /
  Time Format; Display / Shiny glass light effect; Display /
  Connections/Draw connections and patchbay lines as Bezier
  curves; Misc/Configure as temporary server.

- A brand new and way long overdue connections Graph widget
  is finally introduced, only to be accessible through the
  context menu at this time.

- Extended multi-selection is now supported on all Connections
  client/port lists, allowing for multiple (dis)connections at
  once.

- Disable singleton/unique application instance setup logic
  when the display server platform is not X11.

- A little hardening on the configure (autoconf) macro side.


0.5.0  2017-12-16  End of Autum'17 release.

- Current preset is always taken into account if ever changes
  while the Setup dialog is hidden (eg. via context menu).

- Desktop entry specification file is now finally independent
  from build/configure template chains.

- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).


0.4.5  2017-04-27  Pre-LAC2017 release frenzy.

- On some desktop-shells, the system tray icon blinking on
  XRUN ocurrences, have been found responsible to excessive
  CPU usage, an "eye-candy" effect which is now optional as
  far as Setup/Display/Blink server mode indicator goes.

- Added French man page (by Olivier Humbert, thanks).

- Make builds reproducible byte for byte, by getting rid of
  the configure build date and time stamps.


0.4.4  2016-11-14  A Fall'16 release.

- Fixed an early crash when the singleton/unique application